--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,28 @@
 {
-    "manifest_version":2,
-    "version":"0.0.1",
-    "name":"New Thunder Cross"
+
+  "description": "New generation Thunder invoker",
+  "manifest_version": 2,
+  "name": "ThunderCross",
+  "version": "0.1",
+  "icons": {
+    "48": "icons/message.svg"
+  },
+
+  "applications": {
+    "gecko": {
+      "id": "cai.sky.china@gmail.com",
+      "strict_min_version": "50.0"
+    }
+  },
+
+  "background": {
+    "scripts": ["main.js"]
+  },
+
+  "browser_action": {
+    "default_icon": "icons/message.svg"
+  },
+  
+  "permissions": ["nativeMessaging"]
+
 }
