--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,4 @@
 {
-
   "description": "New generation Thunder invoker",
   "manifest_version": 2,
   "name": "ThunderCross",
@@ -16,13 +15,21 @@
   },
 
   "background": {
-    "scripts": ["main.js"]
+    "scripts": [
+      "catch.js",
+      "main.js"
+      ]
   },
 
   "browser_action": {
     "default_icon": "icons/message.svg"
   },
   
-  "permissions": ["nativeMessaging"]
-
+  "permissions": [
+    "nativeMessaging",
+    "downloads",
+    "webRequest",
+    "webRequestBlocking",
+    "<all_urls>"
+    ]
 }
