--- a/manifest.json
+++ b/manifest.json
@@ -10,12 +10,15 @@
   "applications": {
     "gecko": {
       "id": "cai.sky.china@gmail.com",
-      "strict_min_version": "50.0"
+      "strict_min_version": "52.0"
     }
   },
 
   "background": {
     "scripts": [
+      "fileExt.js",
+      "getFileName.js",
+      "isDownloadable.js",
       "catch.js",
       "main.js"
       ]
