async io completed on c#, next todo is make reply from c# to js.

--- a/ThunderCross/ThunderCross/ThunderCross.csproj
+++ b/ThunderCross/ThunderCross/ThunderCross.csproj
@@ -109,6 +109,7 @@
       <DependentUpon>AskDL.cs</DependentUpon>
     </Compile>
     <Compile Include="DLAgent.cs" />
+    <Compile Include="DLReply.cs" />
     <Compile Include="DLRequest.cs" />
     <Compile Include="DLTask.cs" />
     <Compile Include="DMThunder.cs" />
