update...what happened?????

--- a/ThunderCross/ThunderCross/ThunderCross.csproj
+++ b/ThunderCross/ThunderCross/ThunderCross.csproj
@@ -87,6 +87,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ByteSize, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ByteSize.1.3.0\lib\net45\ByteSize.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -112,7 +115,9 @@
     <Compile Include="DLReply.cs" />
     <Compile Include="DLRequest.cs" />
     <Compile Include="DLTask.cs" />
+    <Compile Include="DMEagleGet.cs" />
     <Compile Include="DMThunder.cs" />
+    <Compile Include="IDownloadManager.cs" />
     <Compile Include="ProcessUtility.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -149,6 +154,12 @@
     <EmbeddedResource Include="AskDL.resx">
       <DependentUpon>AskDL.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SplitButton\SplitButton.csproj">
+      <Project>{6a0a48a2-f356-4e76-bb59-998987567dd1}</Project>
+      <Name>SplitButton</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
