--- a/ThunderCross/ThunderCross/packages.config
+++ b/ThunderCross/ThunderCross/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ByteSize" version="1.3.0" targetFramework="net461" />
+  <package id="ILMerge" version="2.14.1208" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
 </packages>
