--- a/ThunderCross/ThunderCross/packages.config
+++ b/ThunderCross/ThunderCross/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="ByteSize" version="1.3.0" targetFramework="net461" />
   <package id="ILMerge" version="2.14.1208" targetFramework="net461" />
+  <package id="ILRepack" version="2.0.15" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
 </packages>
