--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "description": "New generation Thunder invoker",
     "manifest_version": 2,
     "name": "ThunderCross",
-    "version": "0.2.3b1",
+    "version": "0.2.4",
     "applications": {
         "gecko": {
             "id": "Thunder@Cross",
