--- a/manifest.json
+++ b/manifest.json
@@ -34,6 +34,7 @@
         "storage",
         "nativeMessaging",
         "tabs",
+        "downloads",
         "webRequest",
         "webRequestBlocking",
         "<all_urls>"
