--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "description": "New generation Thunder invoker",
     "manifest_version": 2,
     "name": "ThunderCross",
-    "version": "0.2.5",
+    "version": "0.2.6a",
     "applications": {
         "gecko": {
             "id": "Thunder@Cross",
@@ -23,6 +23,7 @@
             "Downloadable.js",
             "ActionRule.js",
             "catch.js",
+            "contextmenu.js",
             "main.js"
         ]
     },
@@ -35,6 +36,7 @@
         "storage",
         "nativeMessaging",
         "tabs",
+        "menus",        
         "downloads",
         "webRequest",
         "webRequestBlocking",
